--- a/wiki/CustomSensors.wiki
+++ b/wiki/CustomSensors.wiki
@@ -451,6 +451,9 @@ You can optionally provide a comma seperated list of users to check if a specifi
 
 === Version history ===
 
+====1.0.2.1 _04/08/2010_====
+ * Bugfix: As user credentials cannot be used for local connections, running the sensor against the local machine (probe), simply omit the username and password.
+
 ====1.0.1.1 _31/07/2010_====
  * First public version
 
