--- a/wiki/Notifications.wiki
+++ b/wiki/Notifications.wiki
@@ -9,7 +9,7 @@ Looking for notifications written for PRTG version 8 or later? Take a look at [h
 ====Latest versions:====
 || *Notification* || *Version* || *Date* || *Download* ||
 ||[#Twitter Twitter]||1.0.2.1||05/02/2010||[http://prtg7addons.googlecode.com/files/PTF.Twitter.zip here]||
-||[#Launcher Launcher]||1.0.2.1||27/07/2010||[http://prtg7addons.googlecode.com/files/PTF.Launcher.zip here]||http://gf-ptf.googlecode.com/files/Arrow_New_50.png||
+||[#Launcher Launcher]||1.0.3.1||23/08/2010||[http://prtg7addons.googlecode.com/files/PTF.Launcher.zip here]||http://gf-ptf.googlecode.com/files/Arrow_Updated_50.png||
 
 == General ==
 All Notifications listed target the _.net framework 2.0_.
@@ -49,6 +49,17 @@ PTF launcher is a Custom Notification that can launch external applications. Mor
  back to [#Latest_versions: top]
 
 === Version history === 
+====1.0.3.1 _23/08/2010_====
+ * Bugfix: Using the username and password parameter resulted into "Could not load file or assembly 'AliasAccount'"
+ * New: All errors of both the Launch notification and the Launcher application are now written into the machine's event log.
+ * New: Added a parameter to activate a relay connected to the comport of the machine running the Launcher application
+{{{
+-io=the comport number, pin, state and optional timeout
+
+-io=4,7,1 will activate the relay connected to pin 7 on comport 4.
+-io=4,7,0 will deactivate the relay connected to pin 7 on comport 4.
+-io=4,7,1,5 will activate the relay connected to pin 7 on comport 4 for 5 seconds.
+}}}
 ====1.0.2.1 _27/07/2010_====
  * New: added parameters to have Launcher.exe run on any pc
 {{{
