--- a/wiki/Notifications.wiki
+++ b/wiki/Notifications.wiki
@@ -8,7 +8,7 @@ Looking for notifications written for PRTG version 8 or later? Take a look at [h
 
 ====Latest versions:====
 || *Notification* || *Version* || *Date* || *Download* ||
-||[#Twitter Twitter]||1.0.2.1||05/02/2010||[http://prtg7addons.googlecode.com/files/PTF.Twitter.zip here]||
+||[#Twitter Twitter]||1.0.2.1||05/02/2010||[http://prtg7addons.googlecode.com/files/PTF.Twitter.zip here]||http://gf-ptf.googlecode.com/files/Discontinued.png||
 ||[#Launcher Launcher]||1.0.3.1||23/08/2010||[http://prtg7addons.googlecode.com/files/PTF.Launcher.zip here]||http://gf-ptf.googlecode.com/files/Arrow_Updated_50.png||
 
 == General ==
