Edited wiki page CustomSensors through web user interface.

--- a/wiki/CustomSensors.wiki
+++ b/wiki/CustomSensors.wiki
@@ -29,8 +29,10 @@ Looking for sensors written for PRTG version 8 or later? Take a look at [http://
 ||[#IPonDNSBL IPonDNSBL]||1.0.1.1||21/07/2010|||[http://prtg7addons.googlecode.com/files/PTF.IPonDNSBL.zip here]||
 ||[#UserLoggedin UserLoggedin]||1.0.1.1||31/07/2010|||[http://prtg7addons.googlecode.com/files/PTF.UserLoggedin.zip here]||
 ||[#TraceRoute TraceRoute]||1.0.1.1||18/08/2010|||[http://prtg7addons.googlecode.com/files/PTF.TraceRoute.zip here]||
-||[#ADSReplFailures ADSReplFailures]||1.0.2.1||19/08/2010|||[http://prtg7addons.googlecode.com/files/PTF.ADSReplFailures.zip here]||http://gf-ptf.googlecode.com/files/Arrow_New_50.png||
+||[#ADSReplFailures ADSReplFailures]||1.0.2.1||19/08/2010|||[http://prtg7addons.googlecode.com/files/PTF.ADSReplFailures.zip here]||
 ||[#PingDelayedUp PingDelayedUp]||1.0.1.1||01/09/2010|||[http://prtg7addons.googlecode.com/files/PTF.PingDelayedUp.zip here]||http://gf-ptf.googlecode.com/files/Arrow_New_50.png||
+||[http://code.google.com/p/prtg-addons/wiki/PTF_CS_MediaStreamer MediaStreamer]||1.0.1.1||17/09/2010|||[http://code.google.com/p/prtg-addons/w/edit/PTF_Custom_Sensors here]||http://gf-ptf.googlecode.com/files/Arrow_New_50.png||
+
 
 == Overview ==
 === Custom Sensors for PRTG V7 ===
